// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 Element applies normalWeight modifier 1`] = `
<h1
  className="sc-bdVaJa iGfYMb"
>
  Header Element
</h1>
`;

exports[`H1 Element renders correctly 1`] = `
<h1
  className="sc-bdVaJa jqOjeD"
>
  Header Element
</h1>
`;
